--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<html>
-<BEAN>
-  AMC <br>
-  Craig Chen <br>
-  Weichen Liu <br>
-  Ann Li <br>
-  .
-</html>
+<h1> AMC <h1> <br>
+<h2> Craig Chen <h2> <br>
+<h3> Weichen Liu <h3> <br>
+<h4> Ann Li <h4> <br>
+<title> bean </title>
