--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <h1> AMC <h1> <br>
 <h2> Craig Chen <h2> <br>
-<h3> Weichen Liu <h3> <br>
-<h4> Ann Li <h4> <br>
+Weichen Liu <br>
+Ann Li <br>
 <title> bean </title>
