--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
-<h1> AWC </h1>
-<h2> Craig Chen </h2> 
-Weichen Liu <br>
-Ann Li
-<title> bean </title>
+<!AWC Roster: Craig Chen, Weichen Liu, Ann Li>
+<!IntroCS pd5 sec08>
+<!HW02 - Publishio!>
+<!2021-02-08>
+
+<h1> AWC </h1> <!Our Team name as heading 1>
+<h2> Craig Chen </h2> <!My name in heading 2>
+Weichen Liu <br> <!Teammate's name with line break at the end>
+Ann Li <!Teammate's name>
+<title> bean </title> <!Sets browser title bar to bean, my duckie's name>
