--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@ HW02 - Publishio
 <html>
   <head>
     <title> bean </title> 
-    <!Sets browser title bar to bean, my duckie's name>
+    <!--Sets browser title bar to bean, my duckie's name-->
   </head>
   <body>
     <h1> AWC </h1> 
-    <!Our Team name as heading 1>
+    <!--Our Team name as heading 1-->
     <h2> Craig Chen </h2> 
-    <!My name in heading 2>
+    <!--My name in heading 2-->
     Weichen Liu <br> 
-    <!Teammate's name with line break at the end>
+    <!--Teammate's name with line break at the end-->
     Ann Li 
-    <!Teammate's name>
+    <!--Teammate's name-->
   </body>
 </html>
 
