--- a/index.html
+++ b/index.html
@@ -1,23 +1,10 @@
 <!--
 AWC Roster: Craig Chen, Weichen Liu, Ann Li>
 IntroCS pd5 sec08
-HW02 - Publishio
-2021-02-08
+HW03 - Thank you for coming to my TED talk
+2021-02-010
 -->
 <html>
-  <head>
-    <title> bean </title> 
-    <!--Sets browser title bar to bean, my duckie's name-->
-  </head>
-  <body>
-    <h1> AWC </h1> 
-    <!--Our Team name as heading 1-->
-    <h2> Craig Chen </h2> 
-    <!--My name in heading 2-->
-    Weichen Liu <br> 
-    <!--Teammate's name with line break at the end-->
-    Ann Li 
-    <!--Teammate's name-->
-  </body>
+  <h1>Fortnite</h1>
+  <h2>Table Of Contents</h2>
 </html>
-
