--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@ HW03 - Thank you for coming to my TED talk
 2021-02-010
 -->
 <html>
-  <h1>Fortnite</h1>
+  <h1>Chess</h1>
   <h2>Table Of Contents</h2>
   <ul>
-    <li>a</li>
-    <li>b</li>
+    <li>Pieces</li>
+    <ul>
+      <li>King</li>
+      <li>Queen</li>
+      <li>Pawn</li>
+      <li>Bishop</li>
+      <li>Rook</li>
+      <li>Knight</li>
+    </ul>
+    <li>How to Play</li>
+    <li>Where to Play</li>
   </ul>
 </html>
