--- a/index.html
+++ b/index.html
@@ -19,5 +19,13 @@ HW03 - Thank you for coming to my TED talk
     </ul>
     <li>How to Play</li>
     <li>Where to Play</li>
+    <li>Teammate Showcase</li>
   </ul>
+  <h2>Pieces</h2>
+  <h3>King</h3>
+  <h3>Queen</h3>
+  <h3>Pawn</h3>
+  <h3>Bishop</h3>
+  <h3>Rook</h3>
+  <h3>Knight</h3>
 </html>
