--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ HW03 - Thank you for coming to my TED talk
   <h1>Chess</h1>
   <h2>Table Of Contents</h2>
   <ul>
+    <li>Board</li>
     <li>Pieces</li>
     <ul>
       <li>King</li>
@@ -21,11 +22,20 @@ HW03 - Thank you for coming to my TED talk
     <li>Where to Play</li>
     <li>Teammate Showcase</li>
   </ul>
+  <h2>Board</h2>
+  <p>The Board is 8 by 8 with a checkered pattern of white and black squares. Looking at the board as a graph with a x and y axis, the y axis is labeled from 1 to 8 and x axis labeled from a to h. A specific box/square can be refered to as its x axis coordinate and then y axis coordinate (example: a3) There are 2 sides, white and black. The black pieces start on the 7th and 8th rank and the white pieces start on the 1st and 2nd rank. Each side starts off with 16 pieces including 1 king, 1 queen, 2 rooks, 2 bishops, 2 knights, and 8 pawns.<!p>
   <h2>Pieces</h2>
+  <p>There are 6 pieces in chess and each of them have their own unique function and value.</p>
   <h3>King</h3>
+  <p>The king unlike every other piece does not really have a numerical value assigned as it is the piece you are trying to defend and you can't lose it. If you can no longer defend your king and he is under check then you will lose. What is check? Check is when the king is being attacked by any opponent piece other than the opponent king. It is important to remember kings cannot be within 1 square of each other. The King starts off on </p>
   <h3>Queen</h3>
+  <p></p>
   <h3>Pawn</h3>
+  <p></p>
   <h3>Bishop</h3>
+  <p></p>
   <h3>Rook</h3>
+  <p></p>
   <h3>Knight</h3>
+  <p></p>
 </html>
