--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@ HW03 - Thank you for coming to my TED talk
   <h2>Pieces</h2>
   <p>There are 6 pieces in chess and each of them have their own unique function and value.</p>
   <h3>King</h3>
-  <p>The king unlike every other piece does not really have a numerical value assigned as it is the piece you are trying to defend and you can't lose it. If you can no longer defend your king and he is under check then you will lose. What is check? Check is when the king is being attacked by any opponent piece other than the opponent king. It is important to remember kings cannot be within 1 square of each other. The King starts off on </p>
-  <h3>Queen</h3>
-  <p></p>
+  <p>The king unlike every other piece does not really have a numerical value assigned as it is the piece you are trying to defend and you can't lose it. If you can no longer defend your king and he is under check then you will lose. What is check? Check is when the king is being attacked by any opponent piece other than the opponent king. If you are under check, you have to stop the check on that very move either by moving your king away, blocking the check, or capturing the attacking piece. It is important to remember kings cannot be within 1 square of each other. The King can only move one square right, left, up, down, or diagonally. It cannot land on a square that is being attacked or defended by an opponent piece. Like every other piece in chess, it cannot land on a square that is being occupied by a piece of the same color. The King starts off on e1 if you are white and e8 if you are black.</p>
   <h3>Pawn</h3>
-  <p></p>
-  <h3>Bishop</h3>
-  <p></p>
-  <h3>Rook</h3>
-  <p></p>
+  <p>The pawn is the weakest piece in chess at only a value of 1. Each side has 8 pawns and if you are white, they will all start off on the 2nd rank and if you are black they will all start off on the 7th rank. If your pawn is in it's starting position then you can move it up 2 ranks away from you or just one rank. After your pawn is no longer in this starting position, the pawn can only move up one square at a time. Pawns capture diagonally only although they move forward only. Pawns can capture pieces that are either 1 square diagonally front left of them or diagonally front right of them. (Keep in mind when I say front I mean the direction away from you) If a pawn happens to reach the last rank then you have to promote the pawn to any other piece you want other than a pawn or king. You can then replace the pawn with the piece of your choosing.</p>
   <h3>Knight</h3>
-  <p></p>
+  <p>The knight comes in at a value of 3 and its very unique in the fact that it can jump over pieces. The knight moves in a L shape, 2 spaces forward, backward, left or right and then one space right or left. The knight can move to any empty space if it is directly an L shape away and if you aren't under check or have the square occupied by another one of your own pieces. Knights are placed on the b and g file, 1st rank if you are white and 8th rank if you are black </p>
+  <h3>Bishop</h3>
+  <p>Bishops are commonly known to have a value of 3 just like knights but many would argue it is a bit more valuable. Bishops can only move in a diagonal pattern but have no limitation to how far they can move diagonally other than the board limitation or if their path is blocked.  Bishops are placed on the c and f file, 1st rank if you are white and 8th rank if you are black </p>
+  <h3>Rook</h3>
+  <p>Rooks come in at a value of 5 and they are like bishops except for the fact that they attack and move horizontally rather than diagonally.  Rooks are placed on the a and h file, 1st rank if you are white and 8th rank if you are black </p>
+  <h3>Queen</h3>
+  <p>The Queen is the most powerful piece coming in at an value at around 9. It basically has the powers of both the rook and bishops and this is why it is so powerful. The queen is placed on d1 for white and d8 for black</p>
+
 </html>
