--- a/index.html
+++ b/index.html
@@ -42,4 +42,7 @@ HW03 - Thank you for coming to my TED talk
   <p>The concept of how to play chess is very complex and takes a while just to get all the basic concepts let alone become skilled. After understanding how pieces move and interact with each other, learning openings and strategies are a good next step to get ahold a better understanding of the game. Tactical puzzles are also become quite helpful once you develop a strong base and knowledge of the game. </p>
   <h2>Where to Play</h2>
   <p>If you want to play chess competitively and have a rating, there are many opportunities to play chess at tournaments. For example, in New York City there is a program called Chess In Schools that normally would host tournaments in schools around the city every weekend or holiday. If you just want to play for fun you can buy a chess set to play at home with friends or family or you can also play online. I would reccomend playing on <a href="https://www.chess.com/home"> chess.com </a> or <a href="https://lichess.org/"> lichess.org </a> as they are probably the top 2 sites for online chess and they are the sites I use to play chess on as well.</p>
+  <h3>Showcasing Team AWC</h3>
+  <a href="https://weichenliu0571.github.io/web/"> Weichen liu's Website </a>
+  <a href="https://annli33.github.io/web/"> Ann Li's Website </a>
 </html>
