--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@ HW03 - Thank you for coming to my TED talk
     <li>Teammate Showcase</li>
   </ul>
   <h2>Board</h2>
+  <img src = "chess.jpg">
   <p>The Board is 8 by 8 with a checkered pattern of white and black squares. Looking at the board as a graph with a x and y axis, the y axis is labeled from 1 to 8 and x axis labeled from a to h. A specific box/square can be refered to as its x axis coordinate and then y axis coordinate (example: a3) There are 2 sides, white and black. The black pieces start on the 7th and 8th rank and the white pieces start on the 1st and 2nd rank. Each side starts off with 16 pieces including 1 king, 1 queen, 2 rooks, 2 bishops, 2 knights, and 8 pawns.<!p>
   <h2>Pieces</h2>
   <p>There are 6 pieces in chess and each of them have their own unique function and value.</p>
