--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ HW03 - Thank you for coming to my TED talk
 2021-02-010
 -->
 <html>
-  <h1>Chess</h1>
+  <h1>Chess Basics</h1>
   <h2>Table Of Contents</h2>
   <ul>
     <li>Board</li>
