--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@ HW03 - Thank you for coming to my TED talk
 2021-02-010
 -->
 <html>
-  <h1>Chess Basics</h1>
-  <h2>Table Of Contents</h2>
-  <ul>
+  <h1>Chess Basics</h1> <!--Title of the page and topic-->
+  <h2>Table Of Contents</h2> <!--Table of Contents list (this line is the title)-->
+  <ul> <!--Start of List in Table of Contents-->
     <li>Board</li>
     <li>Pieces</li>
-    <ul>
+    <ul> <!--Start of Sublist in Table of Contents Pieces section-->
       <li>King</li>
       <li>Queen</li>
       <li>Pawn</li>
