--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ HW03 - Thank you for coming to my TED talk
     <li>Teammate Showcase</li>
   </ul>
   <h2>Board</h2>
-  <img src = "pics/chess.jpg">
+  <img src = "pics/chess.jpg"> <!--Image named chess.jpg in pics-->
   <p>The Board is 8 by 8 with a checkered pattern of white and black squares. Looking at the board as a graph with a x and y axis, the y axis is labeled from 1 to 8 and x axis labeled from a to h. A specific box/square can be refered to as its x axis coordinate and then y axis coordinate (example: a3) There are 2 sides, white and black. The black pieces start on the 7th and 8th rank and the white pieces start on the 1st and 2nd rank. Each side starts off with 16 pieces including 1 king, 1 queen, 2 rooks, 2 bishops, 2 knights, and 8 pawns.<!p>
   <h2>Pieces</h2>
   <img src = "pics/chess-piece-wall-art-21.jpg">
@@ -43,8 +43,8 @@ HW03 - Thank you for coming to my TED talk
   <h2>How to Play</h2>
   <p>Ultimately the goal of chess is to checkmate your opponent but the concept of how to play chess is very complex and takes a while just to get all the basic concepts let alone become skilled. After understanding how pieces move and interact with each other, learning openings and strategies are a good next step to get ahold a better understanding of the game. Tactical puzzles are also become quite helpful once you develop a strong base and knowledge of the game. </p>
   <h2>Where to Play</h2>
-  <p>If you want to play chess competitively and have a rating, there are many opportunities to play chess at tournaments. For example, in New York City there is a program called Chess In Schools that normally would host tournaments in schools around the city every weekend or holiday. If you just want to play for fun you can buy a chess set to play at home with friends or family or you can also play online. I would reccomend playing on <a href="https://www.chess.com/home"> chess.com </a> or <a href="https://lichess.org/"> lichess.org </a> as they are probably the top 2 sites for online chess and they are the sites I use to play chess on as well.</p>
-  <h3>Showcasing Team AWC</h3>
+  <p>If you want to play chess competitively and have a rating, there are many opportunities to play chess at tournaments. For example, in New York City there is a program called Chess In Schools that normally would host tournaments in schools around the city every weekend or holiday. If you just want to play for fun you can buy a chess set to play at home with friends or family or you can also play online. I would reccomend playing on <a href="https://www.chess.com/home"> chess.com </a> or <a href="https://lichess.org/"> lichess.org </a> as they are probably the top 2 sites for online chess and they are the sites I use to play chess on as well.</p> <!--Includes link to lichess.org and chess.com-->
+  <h3>Showcasing Team AWC</h3> <!--Links teammate's pages-->
   <a href="https://weichenliu0571.github.io/web/"> Weichen liu</a>
   <br>
   <a href="https://annli33.github.io/web/"> Ann Li</a>
