--- a/index.html
+++ b/index.html
@@ -47,5 +47,5 @@ HW03 - Thank you for coming to my TED talk
   <h3>Showcasing Team AWC</h3> <!--Links teammate's pages-->
   <a href="https://weichenliu0571.github.io/web/"> Weichen liu</a>
   <br>
-  <a href="https://annli33.github.io/web/"> Ann Li</a>
+  <a href="https://vincent-zhu-cs.github.io/Web/"> Vincent Zhu</a>
 </html>
