--- a/talk.html
+++ b/talk.html
@@ -10,6 +10,7 @@ HW05 - Stuylin'
 <html>
   <head>
   <link href = "main.css" rel = "stylesheet" type = "text/css">
+  <!-- This links my main.css style sheet and gives my website special fonts, background, etc. -->
   </head>
   <body>
   <h1>Chess Basics</h1> <!--Title of the page and topic-->
